--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.2",
+    "react-native-camera": "^0.9.4",
     "react-native-router-flux": "^4.0.0-beta.14",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
