--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'AppTranspCheckReactNative'
+include ':react-native-sketch-view'
+project(':react-native-sketch-view').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sketch-view/android')
 include ':react-native-camera'
 project(':react-native-camera').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-camera/android')
 
