--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.46.2",
     "react-native-camera": "^0.9.4",
     "react-native-router-flux": "^4.0.0-beta.14",
+    "react-native-sketch-view": "^1.0.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
