--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,6 +133,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-orientation')
     compile project(':react-native-sketch-view')
     compile project(':react-native-camera')
     compile fileTree(dir: "libs", include: ["*.jar"])
